Use valueOf instead of deprecated constructors for box types